add student history transactions  template

--- a/Frontend/Cantine/src/app/admin/student-management/manage-student-wallet/manage-student.component.html
+++ b/Frontend/Cantine/src/app/admin/student-management/manage-student-wallet/manage-student.component.html
@@ -93,7 +93,7 @@
                 <mat-icon>add_circle_outline</mat-icon>
                 Ajouter   Un  montant
             </button>
-            <button class="btn">
+            <button  (click)="goToTransactionsHistory()" class="btn">
                 <mat-icon>history</mat-icon>
                 historique des  transactions
             </button>
