--- a/Frontend/Cantine/src/app/admin/meals/all-meals/all-meals.component.html
+++ b/Frontend/Cantine/src/app/admin/meals/all-meals/all-meals.component.html
@@ -7,7 +7,21 @@
     <div *ngIf="meals.length > 0; else noMeals"></div>
 </ng-container>
 -->
+<div class="container">
+      <div class="row">
+          <div class="col-md-2"></div>
+           <div class="col-md-6">
+               <select class="form-control"  [(ngModel)]="selectedOption" >
+                   <option *ngFor="let option of optionsOfMeals" [value]="option" style="font-weight: bolder">{{ option }}</option>
+               </select>
+           </div>
 
+          <div class=" center col-md-4">
+              <button class=" btn" (click)="validateSearch()">valider</button>
+          </div>
+
+      </div>
+</div>
 <div class="container">
     <div class="row">
         <div *ngFor="let meal of meals$ | async " class="col-md-4">
