--- a/Frontend/Cantine/src/app/admin/meals/all-meals/all-meals.component.html
+++ b/Frontend/Cantine/src/app/admin/meals/all-meals/all-meals.component.html
@@ -22,6 +22,12 @@
 
       </div>
 </div>
+
+<ng-container *ngIf="(meals$ | async) as meals; else noMeals">
+    <div *ngIf="meals.length > 0; else noMeals"></div>
+</ng-container>
+
+
 <div class="container">
     <div class="row">
         <div *ngFor="let meal of meals$ | async " class="col-md-4">
