--- a/Frontend/Cantine/src/app/core-cantine/main-core-cantine/main-core-cantine.component.html
+++ b/Frontend/Cantine/src/app/core-cantine/main-core-cantine/main-core-cantine.component.html
@@ -1,5 +1,5 @@
 <mat-toolbar>
-    <div *ngIf="disconnected"  >
+    <div *ngIf="isConnected"  >
         <button (click)="sidenav.toggle()"  class="burgger" mat-icon-button>
             <div *ngIf="!sidenav.opened">
                 <img alt="cantière-logo" src={{user.image}}>
@@ -10,7 +10,7 @@
         </button>
     </div>
 
-    <div class="logo-cantine" *ngIf="!disconnected">
+    <div class="logo-cantine" *ngIf="!isConnected">
         <a href="#"> <img alt="cantière-logo" src="../../assets/logo.png"> </a>
     </div>
 
@@ -20,14 +20,14 @@
         </div>
     </div>
 
-    <div *ngIf="disconnected" class="connect" (click)="logout()" >
+    <div *ngIf="isConnected" class="connect" (click)="logout()" >
         <button>
             <mat-icon>logout</mat-icon>
             Deconnexion
         </button>
     </div>
 
-    <div *ngIf="!disconnected" class="connect" (click)="toLogin()" >
+    <div *ngIf="!isConnected" class="connect" (click)="toLogin()" >
         <button>
             <mat-icon>login</mat-icon>
             Connexion
@@ -35,10 +35,10 @@
     </div>
 
 
-    <div *ngIf="disconnected" class="not-connect-login-small"  >
+    <div *ngIf="isConnected" class="not-connect-login-small"  >
         <mat-icon>logout</mat-icon>
     </div>
-    <div *ngIf="!disconnected" class="not-connect-login-small" >
+    <div *ngIf="!isConnected" class="not-connect-login-small" >
         <mat-icon>login</mat-icon>
     </div>
 </mat-toolbar>
