--- a/Frontend/Cantine/src/app/core-cantine/meals/meals.componenet.html
+++ b/Frontend/Cantine/src/app/core-cantine/meals/meals.componenet.html
@@ -1,35 +1,67 @@
-<div class="center" style="width: 50%; transform: translateX(50%);  ">
+<h1 class="center"> Nos Plats </h1>
 
+<div class="container">
+    <div class="row">
+        <div class="col-md-2"></div>
+        <div class="col-md-6">
+            <select class="form-control" [(ngModel)]="selectedOption">
+                <option *ngFor="let option of optionsOfMeals" [value]="option"
+                        style="font-weight: bolder">{{ option }}</option>
+            </select>
+        </div>
 
-    <h1 class="center"> Nos Plats </h1>
+        <div class=" center col-md-4">
+            <button class=" btn" (click)="validate()">valider</button>
+        </div>
 
-    <div class="container-fluid red">
-        <div class="row">
-            <div *ngFor="let meal of meals$ |async " class="col m4 s12">
-                <div class="card horizontal">
-                    <div class="center">
-                        <img [src]="meal.image" height="40%" width="40%"/>
-                    </div>
+    </div>
+</div>
 
+<ng-container *ngIf="(meals$ | async) as meals; else noMeals">
+    <div *ngIf="meals.length > 0; else noMeals"></div>
+</ng-container>
+
+<div class="container">
+    <div class="row">
+        <div *ngFor="let meal of meals$ | async " class="col-md-4">
+            <div class="card horizontal ">
+                <div class="center">
+                    <img [src]="meal.image" height="190px" width="40%" alt="meal image"/>
                     <div class="card-stacked">
                         <div class="card-content">
-                            <p> plat :   {{meal.label}}</p>
+                            <p><span class="meal-title">{{meal.label}}</span></p>
                             <p> catégorie :  {{meal.category}}</p>
+                            <p> type : {{meal.mealType}}</p>
+                            <p> prix : {{meal.price | euroSymbol }}  </p>
+                            <p>quantity : {{meal.quantity}} </p>
                             <p> description : {{meal.description}}</p>
                         </div>
                     </div>
-                    <div>
-                        <button class="btn" (click)="addToOrder(meal)"> Ajouter Le Plat</button>
+                    <div style="margin: 15px">
+                        <button class="btn" (click)="addToOrder(meal)"> Ajouter Ce Plat</button>
                     </div>
                 </div>
             </div>
         </div>
+
+
+        <div class="center btn" (click)="goBack()">
+            <mat-icon>arrow_back</mat-icon>
+            retour
+        </div>
     </div>
-
-
-    <div class="center btn" (click)="goback()">
-        <mat-icon>arrow_back</mat-icon>
-        retour
-    </div>
-
 </div>
+
+
+<ng-template #noMeals>
+    <div class="center" style=" padding: 12%; height: 50%;">
+        <h2> Aucun plat disponible</h2>
+    </div>
+</ng-template>
+<style>
+    .meal-title {
+        font-size: 20px;
+        font-weight: bold;
+    }
+</style>
+    
