add  search  Menu  component

--- a/Frontend/Cantine/src/app/core-cantine/menu/menu.component.html
+++ b/Frontend/Cantine/src/app/core-cantine/menu/menu.component.html
@@ -5,6 +5,8 @@
 
 <div class="container">
     <div class="row">
+        <app-menu-search></app-menu-search>
+
         <div *ngFor="let menu of menus$ |async " class=" center col m4 s12">
             <div class="card horizontal">
                 <div class="center">
