update   modify  orde  by dialog

--- a/Frontend/Cantine/src/app/admin/orders/order-dashbord/order-dashboard.component.html
+++ b/Frontend/Cantine/src/app/admin/orders/order-dashbord/order-dashboard.component.html
@@ -46,7 +46,7 @@
         margin: 50px;
     }
 
-    .test {
+    .currentOrder {
         border-radius: 10px;
         padding: 1%;
         background: #d0d5e3;
