--- a/Frontend/Cantine/src/app/admin/student-management/edit-student-wallet-dialog/edit-student-wallet-dialog.component.html
+++ b/Frontend/Cantine/src/app/admin/student-management/edit-student-wallet-dialog/edit-student-wallet-dialog.component.html
@@ -1,7 +1,7 @@
 <div class="amount-dialog" >
 
         <h2 class="center">{{data.message}}</h2>
-        <form [formGroup]="amountForm" class="test">
+        <form [formGroup]="amountForm" class="currentOrder">
 
             <!---------------------- Phone Number--------------------------->
             <div class="form-group ">
