--- a/Frontend/Cantine/src/app/student/order/order-dashbord/order-dashboard.component.html
+++ b/Frontend/Cantine/src/app/student/order/order-dashbord/order-dashboard.component.html
@@ -1,8 +1,8 @@
-<div class="container test">
+<div class="container currentOrder">
     <div class="row" *ngIf="!isOrderEmpty()">
-        <h2>Ma commande </h2>
+        <h2>Ma commande  : </h2> <br> <br>
         <div class="col-md-2">
-            <span>Date : 10/09/2023</span>
+            <span> <strong> Date : </strong> 10/09/2023</span>
         </div>
         <div class="col-md-2">
             <span><strong>Nombre de Plats : </strong> {{order.meals.length}}</span>
@@ -85,17 +85,17 @@
         transform: translate(50%, 0);
     }
 
-    .test {
-        margin-top: 20px;
-        margin-bottom: 10%;
+    .currentOrder {
+        margin-top: 4%;
+        margin-bottom: 5%;
         border: 1px solid #ccc;
         padding: 10px;
         border-radius: 5px;
     }
 
     h2 {
-        margin-top: 0px;
-        margin-bottom: 0px;
+        margin-top: 0;
+        margin-bottom: 0;
     }
 
     .test2 {
