--- a/Frontend/Cantine/src/app/student/dashbord/profile/profile.component.html
+++ b/Frontend/Cantine/src/app/student/dashbord/profile/profile.component.html
@@ -178,11 +178,11 @@
                 <span *ngIf="touched" (click)="onSubmit()">   Valider </span>
             </div>
 
-            <div class="btn" (click)="cancel()">
-                Annuler
-            </div>
         </div>
 
+        <div class="btn" (click)="cancel()">
+            Annuler
+        </div>
 
     </div>
 </div>
@@ -199,7 +199,7 @@
     }
 
 
-    .test {
+    .currentOrder {
         padding: 5px;
         margin-top: 30px;
         border: 1px solid rgba(50, 47, 47, 0.64);
