--- a/Frontend/Cantine/src/app/core-cantine/authentication/authentication.component.html
+++ b/Frontend/Cantine/src/app/core-cantine/authentication/authentication.component.html
@@ -83,7 +83,7 @@
             </form>
         </div>
 
-        <div class="center Inscribed-user">
+        <div class="center sign-user" (click)="goToSignUpStudent()">
             <p style="color: #004a9f"> je suis pas encore inscrit ! </p>
         </div>
     </div>
