--- a/Frontend/Cantine/src/app/student/dashbord/sign-up/sign-up.component.html
+++ b/Frontend/Cantine/src/app/student/dashbord/sign-up/sign-up.component.html
@@ -9,14 +9,14 @@
                 </div>
 
                 <div class="center">
-                    <h2>Je m'inscris en tant que  Etudent  de  Aston  Ecole</h2>
+                    <h2>Je m'inscris en tant que Etudent de Aston Ecole</h2>
                 </div>
 
                 <form [formGroup]="studentForm">
 
                     <!---------------------- Name --------------------------->
                     <div class="form-group ">
-                        <label for="firstName"> Prénom :  </label>
+                        <label for="firstName"> Prénom : </label>
                         <input [ngClass]="{ 'is-invalid': submitted && f['firstName'].errors }" class="form-control"
                                formControlName="firstName"
                                placeholder="  Votre Prénom "
@@ -24,21 +24,20 @@
                                id="firstName"
                         />
                         <div *ngIf="submitted && f['firstName'].errors" class="invalid-feedback">
-                            <div *ngIf="f['firstName'].errors['required']" class="center"> Votre Prénom est requis</div>
-                            <div *ngIf="f['firstName'].errors['maxlength']" class="center">
-                                votre Prénom  ne doit pas dépasser 60 charctéres
+                            <div *ngIf="f['firstName'].errors?.['required']" class="center"> Votre Prénom est requis</div>
+                            <div *ngIf="f['firstName'].errors?.['maxlength']" class="center">
+                                votre Prénom ne doit pas dépasser 60 charctéres
                             </div>
-                            <div *ngIf="f['firstName'].errors['minlength']" class="center">
-                                votre Prénom    doit avoir au minimum de 3 charctéres
+                            <div *ngIf="f['firstName'].errors?.['minlength']" class="center">
+                                votre Prénom doit avoir au minimum de 3 charctéres
                             </div>
                         </div>
                     </div>
 
 
-
                     <!---------------------- LastName --------------------------->
                     <div class="form-group ">
-                        <label for="lastName"> Nom :  </label>
+                        <label for="lastName"> Nom : </label>
                         <input [ngClass]="{ 'is-invalid': submitted && f['lastName'].errors }" class="form-control"
                                formControlName="lastName"
                                placeholder="  Votre Nom "
@@ -46,24 +45,20 @@
                                id="lastName"
                         />
                         <div *ngIf="submitted && f['lastName'].errors" class="invalid-feedback">
-                            <div *ngIf="f['lastName'].errors['required']" class="center"> Votre Nom est requis</div>
-                            <div *ngIf="f['lastName'].errors['maxlength']" class="center">
-                                votre Nom  ne doit pas dépasser 60 charctéres
+                            <div *ngIf="f['lastName'].errors?.['required']" class="center"> Votre Nom est requis</div>
+                            <div *ngIf="f['lastName'].errors?.['maxlength']" class="center">
+                                votre Nom ne doit pas dépasser 60 charctéres
                             </div>
-                            <div *ngIf="f['lastName'].errors['minlength']" class="center">
-                                votre Nom  doit avoir au minimum de 3 charctéres
+                            <div *ngIf="f['lastName'].errors?.['minlength']" class="center">
+                                votre Nom doit avoir au minimum de 3 charctéres
                             </div>
                         </div>
                     </div>
 
 
-
-
-
-
                     <!---------------------- Email --------------------------->
                     <div class="form-group ">
-                        <label for="email"> Email :  </label>
+                        <label for="email"> Email : </label>
                         <input [ngClass]="{ 'is-invalid': submitted && f['email'].errors }" class="form-control"
                                formControlName="email"
                                placeholder="  Votre Email "
@@ -71,21 +66,23 @@
                                id="email"
                         />
                         <div *ngIf="submitted && f['email'].errors" class="invalid-feedback">
-                            <div *ngIf="f['email'].errors['required']" class="center"> Votre Email est requis</div>
-                            <div *ngIf="f['email'].errors['maxlength']" class="center">
-                                votre Nom  ne doit pas dépasser 1000 charctéres
+                            <div *ngIf="f['email'].errors?.['required']" class="center"> Votre Email est requis</div>
+                            <div *ngIf="f['email'].errors?.['maxlength']" class="center">
+                                votre Nom ne doit pas dépasser 1000 charctéres
                             </div>
-                            <div *ngIf="f['email'].errors['email']" class="center">
-                                Format  Email  incorrect
+                            <div *ngIf="f['email'].errors?.['email']" class="center">
+                                Format Email incorrect
                             </div>
 
-                            <div *ngIf="f['email'].errors['pattern']" class="center">
-                                Format  Email  incorrect pattern
+                            <div *ngIf="f['email'].errors?.['pattern']" class="center">
+                                Format Email incorrect pattern
                             </div>
-                        </div>
 
-                        <div *ngIf="submitted && existEmail && !f['email'].errors " class="center">
-                            Email  existe déja
+                            <div *ngIf="f['email'].errors?.['existingEmail']" class="center">
+                                Email existe déja
+                            </div>
+
+
                         </div>
 
                     </div>
@@ -93,7 +90,7 @@
 
                     <!---------------------- Birthdate--------------------------->
                     <div class="form-group ">
-                        <label for="birthDate"> Date De  Naissance   :  </label>
+                        <label for="birthDate"> Date De Naissance : </label>
                         <input [ngClass]="{ 'is-invalid': submitted && f['birthDate'].errors }" class="form-control"
                                formControlName="birthDate"
                                placeholder="Votre  Date  De  Naissance "
@@ -101,21 +98,17 @@
                                id="birthDate"
                         />
                         <div *ngIf="submitted && f['birthDate'].errors" class="invalid-feedback">
-                            <div *ngIf="f['birthDate'].errors['required']" class="center"> La  date  de  naissance  est requise     </div>
+                            <div *ngIf="f['birthDate'].errors?.['required']" class="center"> La date de naissance est
+                                requise
+                            </div>
 
                         </div>
                     </div>
 
 
-
-
-
-
-
-
                     <!---------------------- Password --------------------------->
                     <div class="form-group ">
-                        <label for="password"> Mot  de passe  :  </label>
+                        <label for="password"> Mot de passe : </label>
                         <input [ngClass]="{ 'is-invalid': submitted && f['password'].errors }" class="form-control"
                                formControlName="password"
                                placeholder="  Votre Mot  de passe "
@@ -123,13 +116,15 @@
                                id="password"
                         />
                         <div *ngIf="submitted && f['password'].errors" class="invalid-feedback">
-                            <div *ngIf="f['password'].errors['required']" class="center"> Votre Mot  de  passe  est requis</div>
-                            <div *ngIf="f['password'].errors['maxlength']" class="center">
-                                votre Mot De passe  ne doit pas dépasser   20 charctéres
+                            <div *ngIf="f['password'].errors?.['required']" class="center"> Votre Mot de passe est
+                                requis
+                            </div>
+                            <div *ngIf="f['password'].errors?.['maxlength']" class="center">
+                                votre Mot De passe ne doit pas dépasser 20 charctéres
                             </div>
 
-                            <div *ngIf="f['password'].errors['minlength']" class="center">
-                                votre Mot de passe   doit avoir au minimum de 6 charctéres
+                            <div *ngIf="f['password'].errors?.['minlength']" class="center">
+                                votre Mot de passe doit avoir au minimum de 6 charctéres
                             </div>
 
 
@@ -137,19 +132,21 @@
                     </div>
 
 
-
                     <!---------------------- Password Confirmation--------------------------->
                     <div class="form-group ">
-                        <label for="confirmPassword">  Confirmation Mot  de passe  :  </label>
-                        <input [ngClass]="{ 'is-invalid': submitted && f['confirmPassword'].errors }" class="form-control"
+                        <label for="confirmPassword"> Confirmation Mot de passe : </label>
+                        <input [ngClass]="{ 'is-invalid': submitted && f['confirmPassword'].errors }"
+                               class="form-control"
                                formControlName="confirmPassword"
                                placeholder="  Confirmation  Mot  de passe "
                                type="password"
                                id="confirmPassword"
                         />
                         <div *ngIf="submitted && f['confirmPassword'].errors" class="invalid-feedback">
-                            <div *ngIf="f['confirmPassword'].errors['required']" class="center">  confirmation Mot  de  passe  est requis</div>
-                            <div *ngIf="f['confirmPassword'].errors['matching']" class="center">
+                            <div *ngIf="f['confirmPassword'].errors?.['required']" class="center"> confirmation Mot de
+                                passe est requis
+                            </div>
+                            <div *ngIf="f['confirmPassword'].errors?.['matching']" class="center">
                                 Les deux mots de passe ne sont pas identiques
                             </div>
 
@@ -157,10 +154,9 @@
                     </div>
 
 
-
                     <!---------------------- Town --------------------------->
                     <div class="form-group ">
-                        <label for="town"> Ville :  </label>
+                        <label for="town"> Ville : </label>
                         <input [ngClass]="{ 'is-invalid': submitted && f['town'].errors }" class="form-control"
                                formControlName="town"
                                placeholder="La ville "
@@ -168,13 +164,13 @@
                                id="town"
                         />
                         <div *ngIf="submitted && f['town'].errors" class="invalid-feedback">
-                            <div *ngIf="f['town'].errors['required']" class="center"> le  champs  est  obligatoire </div>
-                            <div *ngIf="f['town'].errors['maxlength']" class="center">
-                                Le nom de   la ville  ne doit pas dépasser   1000 charctéres
+                            <div *ngIf="f['town'].errors?.['required']" class="center"> le champs est obligatoire</div>
+                            <div *ngIf="f['town'].errors?.['maxlength']" class="center">
+                                Le nom de la ville ne doit pas dépasser 1000 charctéres
                             </div>
 
-                            <div *ngIf="f['town'].errors['minlength']" class="center">
-                                Le  nom  de  la ville    doit avoir au minimum de 3 charctéres
+                            <div *ngIf="f['town'].errors?.['minlength']" class="center">
+                                Le nom de la ville doit avoir au minimum de 3 charctéres
                             </div>
 
 
@@ -182,11 +178,9 @@
                     </div>
 
 
-
-
                     <!---------------------- Phone Number--------------------------->
                     <div class="form-group ">
-                        <label for="phoneNumber">  Numéro Tél  :  </label>
+                        <label for="phoneNumber"> Numéro Tél : </label>
                         <input [ngClass]="{ 'is-invalid': submitted && f['phoneNumber'].errors }" class="form-control"
                                formControlName="phoneNumber"
                                placeholder="  Votre  Numéro Télephone "
@@ -194,49 +188,40 @@
                                id="phoneNumber"
                         />
                         <div *ngIf="submitted && f['phoneNumber'].errors" class="invalid-feedback">
-                            <div *ngIf="f['phoneNumber'].errors['pattern']" class="center">
-                                Format  Numéro  Téléphone est   incorrect
+                            <div *ngIf="f['phoneNumber'].errors?.['pattern']" class="center">
+                                Format Numéro Téléphone est incorrect
                             </div>
 
                         </div>
                     </div>
 
 
-
-
-
-
                     <!---------------------- StudentClass  --------------------------->
 
                     <div class="form-group">
-                        <label for="studentClass">    </label>
+                        <label for="studentClass"> </label>
                         <select formControlName="studentClass" class="form-control" id="studentClass"
                                 [ngClass]="{ 'is-invalid': submitted && f['studentClass'].errors }" name="studentClass">
-                            <option value="" disabled>-- Votre  class --</option>
+                            <option value="" disabled>-- Votre class --</option>
                             <ng-container *ngFor="let Sclass of studentClass$ | async ">
                                 <option [value]="Sclass.name">{{ Sclass.name }}</option>
                             </ng-container>
                         </select>
                         <div *ngIf="submitted && f['studentClass'].errors" class="invalid-feedback">
-                            <div *ngIf="f['studentClass'].errors['required']" class="center"> saisie de votre  travail est
+                            <div *ngIf="f['studentClass'].errors?.['required']" class="center"> saisie de votre travail
+                                est
                                 requise
                             </div>
                         </div>
                     </div>
 
 
-
-
-
-
-
-
                     <!---------------------- Image --------------------------->
                     <div class="form-group">
-                        <label for="image"> Choisissez une  image  de  profile   </label>
+                        <label for="image"> Choisissez une image de profile </label>
 
-                        <input class="input-group-prepend"
-                               [ngClass]="{ 'is-invalid': submitted && f['image'].errors }" class="form-control"
+                        <input class="input-group-prepend form-control"
+                               [ngClass]="{ 'is-invalid': submitted && f['image'].errors }"
                                formControlName="image"
                                placeholder=" IMAGE  DU  Profil "
                                type="file"
@@ -248,11 +233,7 @@
                     </div>
 
 
-
-
-
-
-                    <div   *ngIf="!isLoading;  else loadingTemplate" class="validate-form center">
+                    <div *ngIf="!isLoading;  else loadingTemplate" class="validate-form center">
                         <button class="center btn" (click)="onSubmit()">
                             <span>
                                 <i class="fa fa-check"></i>
@@ -271,8 +252,7 @@
 </div>
 
 
-
-<ng-template #loadingTemplate >
+<ng-template #loadingTemplate>
     <div class="spinner-container">
         <mat-progress-spinner mode="indeterminate"></mat-progress-spinner>
     </div>
