--- a/Frontend/Cantine/src/app/student/order/order-dashbord/modify-order-dialogue/modify-order-dialogue.component.html
+++ b/Frontend/Cantine/src/app/student/order/order-dashbord/modify-order-dialogue/modify-order-dialogue.component.html
@@ -1,5 +1,5 @@
 <!--https://www.youtube.com/watch?v=SvlD_OPszuc-->
-
+<app-loading-dialog *ngIf="isLoading"></app-loading-dialog>
 <h2 mat-dialog-title class="center">Ma commande : </h2>
 <mat-dialog-content class="mat-typography">
     <h3 class="center">------------ MES PLATS ----------------</h3>
@@ -43,60 +43,9 @@
         </div>
     </div>
 
-
-    <p>Learn one way to build applications with Angular and reuse your code and abilities to build
-        apps for any deployment target. For web, mobile web, native mobile and native desktop.</p>
-
-    <h3>Speed &amp; Performance</h3>
-    <p>Achieve the maximum speed possible on the Web Platform today, and take it further, via Web
-        Workers and server-side rendering. Angular puts you in control over scalability. Meet huge
-        data requirements by building data models on RxJS, Immutable.js or another push-model.</p>
-
-    <h3>Incredible tooling</h3>
-    <p>Build features quickly with simple, declarative templates. Extend the template language with
-        your own components and use a wide array of existing components. Get immediate Angular-specific
-        help and feedback with nearly every IDE and editor. All this comes together so you can focus
-        on building amazing apps rather than trying to make the code work.</p>
-
-    <h3>Loved by millions</h3>
-    <p>From prototype through global deployment, Angular delivers the productivity and scalable
-        infrastructure that supports Google's largest applications.</p>
-
-    <h3>What is Angular?</h3>
-
-    <p>Angular is a platform that makes it easy to build applications with the web. Angular
-        combines declarative templates, dependency injection, end to end tooling, and integrated
-        best practices to solve development challenges. Angular empowers developers to build
-        applications that live on the web, mobile, or the desktop</p>
-
-    <h3>Architecture overview</h3>
-
-    <p>The basic building blocks of an Angular application are NgModules, which provide a compilation
-        context for components. NgModules collect related code into functional sets; an Angular app is
-        defined by a set of NgModules. An app always has at least a root module that enables
-        bootstrapping, and typically has many more feature modules.</p>
-
-    <p>Components define views, which are sets of screen elements that Angular can choose among and
-        modify according to your program logic and data. Every app has at least a root component.</p>
-
-    <p>Components use services, which provide specific functionality not directly related to views.
-        Service providers can be injected into components as dependencies, making your code modular,
-        reusable, and efficient.</p>
-
-    <p>Both components and services are simply classes, with decorators that mark their type and
-        provide metadata that tells Angular how to use them.</p>
-
-    <p>The metadata for a component class associates it with a template that defines a view. A
-        template combines ordinary HTML with Angular directives and binding markup that allow Angular
-        to modify the HTML before rendering it for display.</p>
-
-    <p>The metadata for a service class provides the information Angular needs to make it available
-        to components through Dependency Injection (DI).</p>
-
-    <p>An app's components typically define many views, arranged hierarchically. Angular provides
-        the Router service to help you define navigation paths among views. The router provides
-        sophisticated in-browser navigational capabilities.</p>
-    <button class="btn center"> vider Ma commande</button>
+    <div class="center">
+        <button class="btn" (click)="removeOrder()"> supprimer Ma commande</button>
+    </div>
 </mat-dialog-content>
 <mat-dialog-actions align="center">
     <button class="btn" mat-dialog-close> Valider</button>
@@ -104,63 +53,3 @@
 </mat-dialog-actions>
 
 
-<!--
-<div class="container">
-    <div class="row">
-        <h2> Ma commande : </h2>
-        <h3  *ngIf="order.menus.length > 0" class="center"> &#45;&#45; Les Menus &#45;&#45; </h3>
-        <div *ngFor="let menu of order.menus" class="meal">
-            <p>{{ menu.label }}</p>
-            <p>{{ menu.price }}</p>
-            <div class="btn  center" (click)="removeMenuFromOrder(menu)"> supprimer le Menu</div>
-        </div>
-        <h3 class="center"> &#45;&#45; Les Plats &#45;&#45; </h3>
-
-        <div *ngFor="let meal of order.meals" class="col-md-2">
-
-            <div class="card" style="width: 10rem;"  >
-                <img class="card-img-top" src="{{meal.image}}" alt="Card image cap">
-                <div class="card-body">
-                    <h5 class="card-title">{{ meal.label }}</h5>
-                    <p>{{ meal.price }}</p>
-                    <p>{{ meal.category }}</p>
-                    <div class="btn center" (click)="removeMealFromOrder(meal)"> retirer </div>
-                </div>
-            </div>
-
-
-        </div>
-
-
-    </div>
-</div>
-
-<style>
-    .container {
-        border: 2px solid #000;
-        margin-top: 20px;
-        margin-bottom: 20px;
-    }
-
-    .meal {
-        border: 1px solid #000;
-    }
-</style>
-
-
-<p class="title"> Les Menus </p>
-<div *ngFor="let menu of order.menus" class="meal">
-    <p>{{ menu.label }}</p>
-    <p>{{ menu.price }}</p>
-    <div class="btn  center" (click)="removeMenuFromOrder(menu)"> supprimer le Menu</div>
-</div>
-
-<p class="title"> Les plats </p>
-<div *ngFor="let meal of order.meals" class="meal">
-    <p>{{ meal.label }}</p>
-    <p>{{ meal.price }}</p>
-    <p>{{ meal.category }}</p>
-    <div class="btn center" (click)="removeMealFromOrder(meal)"> supprimer le plat</div>
-</div>
-<div class="btn" (click)="removeOrder()"> supprimer La commande</div>
--->
